Sync Afrotextile workspace
